--- a/templates/index.html
+++ b/templates/index.html
@@ -5,10 +5,12 @@
     <title>PasteBag</title>
 </head>
 <body>
-<form action="/result" method="POST">
+<form action="/" method="POST">
     Create your paste:
     <br>
-    <textarea name="paste" rows="30" cols="50"></textarea>
+    <label>
+        <textarea name="paste" rows="30" cols="50"></textarea>
+    </label>
     <br>
     <input type="submit" value="Create">
 </form>
