--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 <form action="/" method="POST">
+    <a href="/login">/login</a>
+    <hr>
     Create your paste:
     <br>
     <label>
