--- a/templates/login.html
+++ b/templates/login.html
@@ -5,6 +5,12 @@
     <title>Login to PasteBag</title>
 </head>
 <body>
-
+<form action="/login" method="POST">
+    <p>Username:<br>
+        <input type="text" name="username"></p>
+    <p>Password:<br>
+        <input type="password" name="password"></p>
+    <input type="submit" value="Log in">
+</form>
 </body>
 </html>
