working login and register

--- a/templates/register.html
+++ b/templates/register.html
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Login to PasteBag</title>
+    <title>Register to PasteBag</title>
 </head>
 <body>
-No account? Register
+Got account already? Login
 <a href="/register">here</a>
 <hr>
-<form action="/login" method="POST">
+<form action="/register" method="POST">
     <p>Username:<br>
         <input type="text" name="username"></p>
     <p>Password:<br>
         <input type="password" name="password"></p>
-    <input type="submit" value="Log in">
+    <input type="submit" value="Register">
 </form>
 </body>
 </html>
