--- a/templates/paste.html
+++ b/templates/paste.html
@@ -5,6 +5,12 @@
     <title>Paste...</title>
 </head>
 <body>
+Paste:
+<br><br>
 {{ content }}
+<br><br>
+Created by:
+<br><br>
+{{ username }}
 </body>
 </html>
