--- a/templates/paste.html
+++ b/templates/paste.html
@@ -6,6 +6,8 @@
     <title>Paste...</title>
 </head>
 <body>
+<a href="/raw/{{ paste_id }}">View raw</a>
+<hr>
 Paste:
 <br><br>
 <div>{{ content }}</div>
