--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,11 @@
     <br>
     <input type="submit" value="Create">
 </form>
-
+<br><br><br><br><br><br><br>
+Most viewed pastes:<br>
+{% for paste in pastes %}
+    <a href="/{{ paste.pasteid }}">Views {{ paste.views }}</a>
+    <br>
+{% endfor %}
 </body>
 </html>
