--- a/templates/paste.html
+++ b/templates/paste.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="{{ url_for('static', filename='pastes.css') }}">
-    <title>Paste...</title>
+    <title>{{ title }}</title>
 </head>
 <body>
 <a href="/raw/{{ paste_id }}">View raw</a>
