added profile pages

--- a/templates/paste.html
+++ b/templates/paste.html
@@ -14,7 +14,7 @@ Paste:
 <br><br>
 Created by:
 <br><br>
-{{ username }}
+<a href="/u/{{ username }}">{{ username }}</a>
 <br><br>
 Total views: {{ views }}
 </body>
