--- a/templates/paste.html
+++ b/templates/paste.html
@@ -6,9 +6,8 @@
     <title>{{ title }}</title>
 </head>
 <body>
-<a href="/raw/{{ paste_id }}">View raw</a>
-<hr>
-Paste:
+{% include "navigation.html" %}
+<a href="/raw/{{ paste_id }}">View raw</a> | Paste:
 <br><br>
 <div>{{ content }}</div>
 <br><br>
