--- a/templates/index.html
+++ b/templates/index.html
@@ -241,7 +241,7 @@
 Most viewed pastes:<br>
 {% for paste in pastes %}
     Views: {{ paste.views }}
-    <a href="/{{ paste.pasteid }}">{{ paste.title }}</a>
+    <a href="/{{ paste.paste_id }}">{{ paste.title }}</a>
     <br>
 {% endfor %}
 </body>
