--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="{{ url_for('static', filename='pastes.css') }}">
 <body>
 <a href="/"> Home</a> |
 {% if session.username %}
