--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,6 +6,14 @@
 </head>
 <body>
 {% include "navigation.html" %}
+{% if session.username == username %}
+    <form action="/u/{{ username }}" method="POST">
+        <input type="submit" value="Edit profile info">
+    </form>
+{% endif %}
+<br><br>
+<img src="data:image/jpeg;base64,{{ pic }}" alt="">
+<br><br>
 Users public pastes:<br>
 {% for paste in pastes %}
     Views: {{ paste.views }}
