--- a/templates/profile.html
+++ b/templates/profile.html
@@ -8,9 +8,14 @@
 {% include "navigation.html" %}
 {% if session.username == username %}
     <form action="/u/{{ username }}" method="POST">
-        <input type="submit" value="Edit profile info">
+        <input type="submit" name="picture" value="Change profile picture">
+        <input type="submit" name="about" value="Edit profile info">
     </form>
 {% endif %}
+<h1>{{ username }}</h1>
+User about:
+<br>
+<pre>{{ data.about }}</pre>
 <br><br>
 <img src="data:image/jpeg;base64,{{ pic }}" alt="">
 <br><br>
