--- a/templates/paste.html
+++ b/templates/paste.html
@@ -17,7 +17,7 @@ let date = "{{ data.time.strftime("%d/%m/%Y, %H:%M:%S") }}"</script>
         class="language-{{ data.syntax }}">
 {{ data.paste }}
 </code></pre>
-{% if session.username == data.username %}
+{% if session.username == data.username or session.admin %}
     <br><br>
     <form action="/{{ paste_id }}" method="POST" onsubmit="return deleteConfirm()">
         <input type="submit" value="Delete">
